welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: not found: value seReplace
  seReplace();
  ^